security/network-policies/base/redis/allow-vote-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-namespace
  namespace: redis
  labels:
    environment: dev
spec:
  podSelector:
    matchLabels:
      app: redis

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vote

    ports:
    - protocol: TCP
      port: 6379
