security/network-policies/base/redis/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: redis
  labels:
    environment: dev
spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
